[FIX] web_editor: prevent overlapping of editor toolbar in mobile view
Steps:
- Open Notes
- Switch to mobile view
- Click on the 'stage' dropdown, it overlaps with editor toolbar.
- Now click on the tags field, the editor toolbar overlaps with the search view
of tag
- Click on projects > task > description (again in mobile view)  editor
overlaps if we choose message or debugger from top

Issue:
- The editor toolbar is causing unwanted overlapping.

Cause:
- The editor toolbar is given high z-index which is causing the overlapping

Fix:
- Making the indexing specifically for screen size greater than 767px so that it
doesn't affect overlapping in mobile view for any module.

Task: 3387850

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -409,14 +409,16 @@ $o-we-toolbar-color-clickable-active: $o-we-bg-darkest;
     }
 }
 
-
-body:not(.editor_has_snippets) {
-    .oe-toolbar {
-        // Bootstrap sets .modal z-index at 1050. Ensure toolbar is visible in
-        // modals. Only apply this to the toolbar if it's not in a snippets menu.
-        z-index: 1051;
+@media only screen and (min-width: 768px) {
+    body:not(.editor_has_snippets) {
+        .oe-toolbar {
+            // Bootstrap sets .modal z-index at 1050. Ensure toolbar is visible in
+            // modals. Only apply this to the toolbar if it's not in a snippets menu.
+            z-index: 1051;
+        }
     }
 }
+
 @media only screen and (max-width: 767px) {
     .oe-toolbar {
         background-color: white;
